[package]
name = "mongodb_id"
version = "0.1.0"
authors = ["Brian DeBoer <bdeboer@experiencecosm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"